docs/sf-export/sfdx-raw/objects/SetupFee__mdt/SetupFee__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Legal Network Setup Fees based on Legal Plan requirement.</description>
    <label>Setup Fee</label>
    <pluralLabel>Setup Fees</pluralLabel>
</CustomObject>