docs/sf-export/sfdx-raw/objects/SetupFee__mdt/fields/Legal_Plan_Required__c.field-meta.xml
<CustomField>
    <fullName>Legal_Plan_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Plan Required</label>
    <type>Checkbox</type>
</CustomField>