docs/sf-export/sfdx-raw/objects/SetupFee__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>